tests/ui/associated-type-bounds/return-type-notation/basic.without.stderr
error: future cannot be sent between threads safely
  --> $DIR/basic.rs:20:13
   |
LL |     is_send(foo::<T>());
   |             ^^^^^^^^^^ future returned by `foo` is not `Send`
   |
   = help: within `impl Future<Output = Result<(), ()>>`, the trait `Send` is not implemented for `impl Future<Output = Result<(), ()>> { <T as Foo>::method(..) }`
note: future is not `Send` as it awaits another future which is not `Send`
  --> $DIR/basic.rs:10:5
   |
LL |     T::method().await?;
   |     ^^^^^^^^^^^ await occurs here on type `impl Future<Output = Result<(), ()>> { <T as Foo>::method(..) }`, which is not `Send`
note: required by a bound in `is_send`
  --> $DIR/basic.rs:14:20
   |
LL | fn is_send(_: impl Send) {}
   |                    ^^^^ required by this bound in `is_send`
help: consider further restricting the associated type
   |
LL | >() where <T as Foo>::method(..): Send {
   |     ++++++++++++++++++++++++++++++++++

error: aborting due to 1 previous error

